# ai-meeting-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/agents/: evaluator.py  extractor.py  rag.py
app/api/routes/: meetings.py  query.py  transcribe.py
app/core/: config.py  database.py  exceptions.py
app/models/: db.py  schemas.py
app/services/: embeddings.py  transcription.py  vector_store.py
app/utils/: logger.py
scripts/: seed_meetings.py
